Großschreibung behoben bei Kostenverteilung + Letzte Einnahmen/Ausgaben